# blocked_robot_env

./: .gitignore  README.md  pyproject.toml
blocked_robot_env/envs/assets/fetch/: pick_and_place.xml  shared.xml
blocked_robot_env/envs/fetch/: __init__.py  fetch_env.py  pick_and_place.py
safety_robot_env/: __init__.py
safety_robot_env/envs/: robot_env.py
safety_robot_env/envs/assets/fetch/: blocked_push_2.xml  blocked_push_3.xml  push.xml
safety_robot_env/envs/fetch/: __init__.py  fetch_env.py  pick_and_place.py  push.py
safety_robot_gym/: __init__.py
safety_robot_gym/envs/: robot_env.py
safety_robot_gym/envs/assets/fetch/: blocked_pick_and_place.xml
safety_robot_gym/envs/fetch/: __init__.py  fetch_env.py  pick_and_place.py  push.py
scripts/: main_test_run_fetch_push.py  main_train_fetch_default_pick_and_place.py  main_train_fetch_default_push.py  main_train_fetch_env.py  main_train_fetch_pick_and_place.py  main_train_fetch_push.py
tests/: test_blocked_pick_and_place_env.py  test_blocked_push_env.py
