[tool.poetry]
name = "safety-robot-gym"
version = "0.1.0"
description = "Gymnasium robotics environments with blocks that robots have to avoid"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium-robotics = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
imageio = "^2.36.0"
stable-baselines3 = "^2.3.2"
tensorboard = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
